--- a/src/components/views/home/index.scss
+++ b/src/components/views/home/index.scss
@@ -11,6 +11,13 @@
         }
     }
 }
+.home-loader{
+    width: 92vw;
+    height: 50vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .home-body-tittle{
     margin: 4vh auto 6vh 4.5vw;
     font-size: 2.5vh;
